# file-extractor

./: .gitignore  README.md  convert_ani_to_cur_working.py  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.svelte.json  vite.config.ts
md_personali/: ANALISI_CODICE.md  BUILD_FIX.md  QUICKSTART.md  SETUP_WINDOWS.md
src/: App.svelte  App.tsx  main-svelte.ts  styles.css  types.ts
src-tauri/: Cargo.toml  ICONS.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  settings.rs
src-tauri/src/commands/: generate.rs  mod.rs  scan.rs
src-tauri/src/notifications/: windows.rs
src/components/: FileSelectionDialog.svelte  FileSelectionDialog.tsx  Notification.tsx  Step1SourceName.svelte  Step1SourceName.tsx  Step2FileSelection.svelte  Step2FileSelection.tsx  Step3Generate.svelte  Step3Generate.tsx  TitleBar.svelte  TitleBar.tsx  TreeNode.svelte
src/lib/: notifications.ts
src/theme/: app.css  common.css  tokens.css
src/utils/: fileIcons.js  fileIcons.ts
ui/: index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
ui/public/cursor/: Hand.cur
ui/public/cursors/: Frieren alt.cur  Frieren busy.cur  Frieren dgn1.cur  Frieren dgn2.cur  Frieren hand.cur  Frieren help.cur  Frieren horz.cur  Frieren link.cur  Frieren move.cur  Frieren normal.cur  Frieren precision.cur  Frieren text.cur  Frieren unavailable.cur  Frieren vert.cur  Frieren work.cur  arrow.cur  hand.cur  help.ani  help.cur  ibeam.cur  no.cur  sizeall.cur  sizenesw.cur  sizens.cur  sizenwse.cur  wait.cur
ui/public/cursors/Normal/: Arrow.cur  custom-cursor.com.url  install.inf
ui/public/cursors/dark/: hand.cur  sizens.cur  wait.ani
ui/public/cursors/light/: no.cur  sizeall.cur  sizenesw.cur  sizewe.cur
ui/src/: App.svelte  main-svelte.ts  styles.css  types.ts
ui/src/components/: FileSelectionDialog.svelte  Step1SourceName.svelte  Step2FileSelection.svelte  Step3Generate.svelte  TitleBar.svelte  TreeNode.svelte
ui/src/lib/: api.ts  notifications.ts
ui/src/utils/: fileIcons.ts
